# voxpad

./: .gitignore  README.md  package-lock.json  package.json
src/: buffer.css  buffer.js  index.html  settings.css  settings.html  settings.js  setup.html  shared.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  buffer.rs  config.rs  download.rs  history.rs  lib.rs  main.rs  rules.rs  vad.rs
src-tauri/src/platform/: mod.rs  windows.rs
